--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -54,6 +54,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+  .chaos-h-link {
+    margin-top: 20px;
+  }
 }
 
 .miss-form {
